--- a/style.css
+++ b/style.css
@@ -3,3 +3,38 @@
 h1 {
     color: darkcyan;
 }
+
+/* images and text formatting */
+
+img {
+    float: left;
+}
+
+p {
+    clear: both;
+}
+
+/* nav structure */
+
+nav li  a  {
+    display: block;
+    padding: 10px 30px;
+    float: left;
+}
+
+nav li {
+    list-style-type: none;
+    display: block;
+    float: left;
+}
+
+nav {
+    clear: both;
+}
+
+/* structure and layout */
+
+#wrapper {
+    width: 960px;
+    margin: 0px auto 0px auto;
+}
