--- a/projects/project-2/assets/css/custom.css
+++ b/projects/project-2/assets/css/custom.css
@@ -1,5 +1,15 @@
 /* custion css file */
 
+blockquote {
+    font-style: italic;
+}
+
+h2 {
+    color: white;
+    text-align: center;
+    font-weight: bolder;
+}
+
 /* home page main image */
 
 #home-main-image {
@@ -11,10 +21,46 @@
     min-height: 300px;
 }
 
-blockquote {
-    font-style: italic;
+/* give-a-ride page main image */
+
+#give-ride-main-image {
+    background-image: url(../img/main-give-a-ride.jpg);
+    background-size: cover;
 }
 
+#give-ride-main-image .cell {
+    min-height: 300px;
+}
+
+/* get-a-ride page main image */
+
+#get-ride-main-image {
+    background-image: url(../img/main-get-a-ride.jpg);
+    background-size: cover;
+}
+
+#get-ride-main-image .cell {
+    min-height: 300px;
+}
+
+/* give-a-gift page main image */
+
+#give-gift-main-image {
+    background-image: url(../img/main-give-a-gift.jpg);
+    background-size: cover;
+}
+
+#give-gift-main-image .cell {
+    min-height: 300px;
+}
+
+/* footer */
+
 footer {
-    background-color: darkslategray;
+    background-color:#292929;
+    color: white;
+}
+
+footer label {
+    color: white;
 }
